# trt

./: .gitignore  Makefile  README.md  client.py  pyproject.toml
inference_servers/litserve/: __init__.py  config_parser.py  server.py
inference_servers/litserve/models/libtorch/: config.json
inference_servers/litserve/models/openvino/: config.json  model.xml
inference_servers/triton/profiling/: model_analyzer_config.yaml
inference_servers/triton/profiling/reports/output_model_repo/resnet50_libtorch_config_52/: config.pbtxt
model_repository/resnet50_libtorch/: config.pbtxt
model_repository/resnet50_openvino/: config.pbtxt
models/: resnet50.py
profiling/: model_analyzer_config.yaml
src/inference_perf/: __init__.py  __module.py  client.py
src/inference_perf/models/: __init__.py  resnet50.py
tests/performance/: README.md  cleanup_locust.sh  distributed.sh  load_test_triton.py  locustfile.py
tests/performance/configs/: 30fps_libtorch.conf  30fps_openvino.conf  high.conf  low.conf  max_load_libtorch.conf  max_load_openvino.conf
tests/performance/litserve/: litserve_locustfile.py
tests/performance/litserve/configs/: 30fps_litserve_libtorch.conf  30fps_litserve_openvino.conf  max_load_litserve_libtorch.conf  max_load_litserve_openvino.conf
tests/performance/resnet50_libtorch/: results_stats.csv  results_stats_history.csv
tests/performance/triton/: triton_locustfile.py
tests/performance/triton/configs/: 30fps_libtorch.conf  30fps_openvino.conf  max_load_libtorch.conf  max_load_openvino.conf
(+23 files in other folders)
